liens navbar et correction collapse

--- a/Found-eat/src/app/nav-bar/nav-bar.component.css
+++ b/Found-eat/src/app/nav-bar/nav-bar.component.css
@@ -5,6 +5,8 @@
   background-color: #0D4E37;
 
   z-index: 0;
+
+  padding-bottom: 70px;
 }
 
 .icon
@@ -12,6 +14,9 @@
 padding-right: 2px;
 }
 
+nav{
+  background-color: #0D4E37;
+}
 
 
 
