--- a/Found-eat/src/app/nav-bar/sidebar/sidebar.component.css
+++ b/Found-eat/src/app/nav-bar/sidebar/sidebar.component.css
@@ -10,8 +10,9 @@
   transform: translateX(-105%);
   transition-duration: 1s;
   border: 4px solid black;
-  z-index: 10;
-  box-shadow: 3px 3px 8px gray;
+  z-index: 11;
+  padding-top: 68px;
+  /*box-shadow: 3px 3px 8px gray;*/
 
 }
 
